# adventofcode2025

./: .gitignore  README.md  cabal.project  shell.nix
.direnv/: nix-profile-25.11-ckrzbxnf6ml6mc0q  nix-profile-25.11-ckrzbxnf6ml6mc0q.rc
Haskell/: AdventOfCode.cabal  LICENSE
Haskell/src/: Main.hs
Haskell/src/Exercises/Day1/: Lib.hs  Test.hs
Haskell/src/Exercises/Day2/: Lib.hs  Test.hs
Haskell/src/Exercises/Day3/: Lib.hs  Test.hs
Rust/AdventOfCode/: Cargo.toml
Rust/AdventOfCode/src/: lib.rs
Rust/AdventOfCode/src/exercises/day1/: mod.rs
Rust/AdventOfCode/src/exercises/day3/: mod.rs
