cabal-version:      3.0
name:               AdventOfCode
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Patrick Aldis
maintainer:         patrick.aldis@virginmedia.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable advent-of-code
    import:           warnings
    -- other-extensions:
    build-depends:    base,
                      tasty,
                      tasty-golden,
                      tasty-hunit,
                      megaparsec,
                      text
    hs-source-dirs:   src
    main-is:          Main.hs
    other-modules:    Exercises.Day1.Lib
                      Exercises.Day1.Test
    default-language: GHC2021
